--- a/week 3/fortune teller/style.css
+++ b/week 3/fortune teller/style.css
@@ -1,7 +1,7 @@
 body {
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background-color: #2c3e50;
-    color:white;
+    background-color: #249fac;
+    color:rgb(255, 255, 255);
     display:flex;
     justify-content: center;
     align-items: center;
@@ -12,10 +12,10 @@ body {
 }
 
 .container{
-    background-color: #34495e;
+    background-color: #0db199;
     padding: 40px;
     border-radius: 15px;
-    box-shadow: 0 10px 20px rgba(233, 230, 230, 0.801);
+    box-shadow: 0 10px 20px rgba(35, 172, 210, 0.801);
     max-width: 400px;
     width: 100%;
 
@@ -30,7 +30,7 @@ h1{
 
 button {
     backgound-color: #d22a17;
-    color: rgb(87, 115, 177);
+    color: rgb(87, 153, 177);
     border: none;
     padding: 15px 30px;
     font-size: 1.2em;
