--- a/week 3/fortune teller/style.css
+++ b/week 3/fortune teller/style.css
@@ -15,7 +15,7 @@ body {
     background-color: #0db199;
     padding: 40px;
     border-radius: 15px;
-    box-shadow: 0 10px 20px rgba(35, 172, 210, 0.801);
+    box-shadow: 0 10px 20px rgba(35, 155, 210, 0.801);
     max-width: 400px;
     width: 100%;
 
@@ -29,7 +29,7 @@ h1{
 }
 
 button {
-    backgound-color: #d22a17;
+    backgound-color: #17d239;
     color: rgb(87, 153, 177);
     border: none;
     padding: 15px 30px;
